# laba

./: .gitignore  CMakeLists.txt
src/: input.txt  main.cpp
src/Acute_triangle/: Acute_triangle.cpp  Acute_triangle.h
src/Figure/: Figure.h
src/Function_module/: function.cpp  function.h
src/Pyramid/: Pyramid.cpp  Pyramid.h
